--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -53,17 +53,16 @@ You can also create a flow run by:
 - Creating a [deployment](/3.0rc/deploy/serve-flows/) on Prefect Cloud or a locally run Prefect server
 - Creating a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API
 
-However you run the flow, Prefect monitors the flow run, capturing flow run state for observability.
+However you run your flow, Prefect monitors the flow run, capturing its state for observability.
 
 <Tip>
 **Logging**
 
-Prefect enables you to log a variety of useful information about your flow and task runs. 
-You can capture information about your workflows for purposes such as monitoring, troubleshooting, and auditing.
-Check out [Logging](/3.0rc/develop/logging) for more information.
+Prefect enables you to log a variety of useful information about your flow runs. 
+You can [log run metadata](/3.0rc/develop/logging) for monitoring, troubleshooting, and auditing purposes.
 </Tip>
 
-When you run a flow that contains tasks or additional flows, Prefect tracks the relationship of each child run to the parent flow run.
+### An Example
 
 The script below fetches statistics about the [main Prefect repository](https://github.com/PrefectHQ/prefect).
 (Note that [httpx](https://www.python-httpx.org/) is an HTTP client library and a dependency of Prefect.)
@@ -188,8 +187,7 @@ def hello_world(name="world"):
 ```
 
 A single flow function could contain all of your workflow's code.
-However, if you put all of your workflow logic in a single flow function and any line of code fails, the entire flow fails 
-and must be retried from the beginning. 
+However, if you put all of your workflow logic in a single flow function and any line of code fails, the entire flow fails and must be retried from the beginning. 
 Organizing your workflow code into smaller flow and task units lets you take advantage of Prefect features like retries, 
 more granular visibility into runtime state, the ability to determine final state regardless of individual task state, and more.
 
