--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -42,24 +42,23 @@ def my_flow():
 
 ## Running flows
 
-A _flow run_ is a record of a single execution of a flow.
+A _flow run_ is a single execution of a flow.
 
-You can create a flow run by calling a flow's entrypoint function just as you would a normal Python function.
+You can create a flow run by calling a flow by its function name, just as you would a normal Python function.
 For example, by running a Python script or importing a flow into an interactive session and calling it.
 
 You can also create a flow run by:
 
 - Using external schedulers such as `cron` to invoke a flow function
-- Creating a [deployment](/3.0rc/deploy/serve-flows/) on Prefect Cloud or a locally run Prefect server
-- Creating a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API
+- Triggering a [deployment](/3.0rc/deploy/serve-flows/) of that flow on Prefect Cloud or a self-hosted Prefect server instance
+- Starting a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API
 
 However you run your flow, Prefect monitors the flow run, capturing its state for observability.
 
 <Tip>
 **Logging**
 
-Prefect enables you to log a variety of useful information about your flow runs. 
-You can [log run metadata](/3.0rc/develop/logging) for monitoring, troubleshooting, and auditing purposes.
+You can log a [variety of metadata](/3.0rc/develop/logging) about your flow runs for monitoring, troubleshooting, and auditing purposes.
 </Tip>
 
 ### An Example
@@ -106,7 +105,7 @@ As shown above, flow definitions can contain arbitrary Python logic.
 
 ## Parameters
 
-As with any Python function, you can pass arguments to a flow including both positional and keyword arguments.
+As with any Python function, you can pass arguments to a flow, including both positional and keyword arguments.
 These arguments defined on your flow function are called [parameters](/3.0rc/develop/write-flows/#parameters).
 They are stored by the Prefect orchestration engine on the flow run object.
 
@@ -186,7 +185,7 @@ def hello_world(name="world"):
     print_hello(name)
 ```
 
-A single flow function could contain all of your workflow's code.
+A single flow function can contain all of your workflow's code.
 However, if you put all of your workflow logic in a single flow function and any line of code fails, the entire flow fails and must be retried from the beginning. 
 Organizing your workflow code into smaller flow and task units lets you take advantage of Prefect features like retries, 
 more granular visibility into runtime state, the ability to determine final state regardless of individual task state, and more.
@@ -205,21 +204,21 @@ Prefect tasks are well suited for parallel or distributed execution using distri
 
 In addition to calling tasks within a flow, you can also call other flows.
 A _nested_ flow run is created when a flow function is called inside the execution of another flow.
-Nested flow runs behave just as all flow runs do.
-There is a full representation of the nested flow run in the backend as if it had been called separately.
 When one flow calls another, the calling flow run is the "parent" run, the called flow run is the "child" run.
 
 Nesting flows is a great way to organize your workflows and offer more visibility within the UI.
 In the UI, each child flow run is linked to its parent and can be individually observed.
+
+For most purposes, nested flow runs behave just as all flow runs do.
+There is a full representation of the nested flow run in the backend as if it had been called separately. 
+Nested flow runs differ from normal flow runs in that they resolve any passed task futures into data.
+This allows data to be passed from the parent flow run to the child run easily.
 
 When a nested flow run starts, it creates a new [task runner](/3.0rc/develop/task-runners/) for any tasks it contains.
 When the nested flow run completes, the task runner shuts down. 
 Nested flow runs block execution of the parent flow run until completion.
 However, asynchronous nested flows can run concurrently with [AnyIO task groups](https://anyio.readthedocs.io/en/stable/tasks.html) or 
 [asyncio.gather](https://docs.python.org/3/library/asyncio-task.html#id6).
-
-Nested flow runs differ from normal flow runs in that they resolve any passed task futures into data.
-This allows data to be passed from the parent flow run to the child run easily.
 
 The relationship between a child and parent flow run is tracked by creating a special task run in the parent flow run.
 This task run mirrors the state of the child flow run.
