Add short doc on transactions

--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -310,7 +310,7 @@ When you run a flow that contains tasks or additional flows, Prefect tracks the 
 **Retries**
 
 Unexpected errors may occur. For example the GitHub API may be temporarily unavailable or rate limited.
-Check out [Retries](/3.0rc/develop/recover-from-failure) to learn how to make your flows more resilient.
+Check out [Transactions](/3.0rc/develop/transactions) to learn how to make your flows more resilient.
 </Tip>
 
 ## Writing flows
