--- a/docs/3.0rc/deploy/work-pools/control-runs.mdx
+++ b/docs/3.0rc/deploy/work-pools/control-runs.mdx
@@ -530,7 +530,7 @@ Below is a list of available worker types. Most worker types require installatio
 
 | Worker Type | Description | Required Package |
 | --- | --- | --- |
-| [`process`](/3.0rc/api-ref/prefect/workers/process/) | Executes flow runs in subprocesses | |
+| [`process`](https://prefect-python-sdk-docs.netlify.app/prefect/workers/process/) | Executes flow runs in subprocesses | |
 | [`kubernetes`](https://prefecthq.github.io/prefect-kubernetes/worker/) | Executes flow runs as Kubernetes jobs | `prefect-kubernetes` |
 | [`docker`](https://prefecthq.github.io/prefect-docker/worker/) | Executes flow runs within Docker containers | `prefect-docker` |
 | [`ecs`](https://prefecthq.github.io/prefect-aws/ecs_worker/) | Executes flow runs as ECS tasks | `prefect-aws` |
