--- a/docs/3.0rc/develop/blocks.mdx
+++ b/docs/3.0rc/develop/blocks.mdx
@@ -44,23 +44,23 @@ You can create and use these block types through the UI and without installing a
 | Block                                                                                                                | Slug                                                     | Description                                                                                                                             |
 | -------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
 | [Azure](/3.0rc/concepts/filesystems/#azure)                                                                                | `azure`                                               | Stores data as a file on Azure Data Lake and Azure Blob Storage.                   |
-| [Custom Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.CustomWebhookNotificationBlock)                 | `custom-webhook`                                                | Calls custom webhooks.                                                |
-| [Discord Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.DiscordWebhook)                               | `discord-webhook`                                                | Calls Discord webhooks.                                                |
+| [Custom Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.CustomWebhookNotificationBlock)                 | `custom-webhook`                                                | Calls custom webhooks.                                                |
+| [Discord Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.DiscordWebhook)                               | `discord-webhook`                                                | Calls Discord webhooks.                                                |
 | [GCS](/3.0rc/concepts/filesystems/#gcs)                                                                                    | `gcs`                                                    | Store data as a file on Google Cloud Storage.                               |
 | [GitHub](/3.0rc/concepts/filesystems/#github)                                                                              | `github`                                                 | Interacts with files stored on public GitHub repositories.                                    |
-| [Kubernetes Cluster Config](/3.0rc/api-ref/prefect/blocks/kubernetes/#prefect.blocks.kubernetes.KubernetesClusterConfig)   | <span class="no-wrap">`kubernetes-cluster-config`</span> | Stores configuration for interaction with Kubernetes clusters.                                 |
+| [Kubernetes Cluster Config](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/kubernetes/#prefect.blocks.kubernetes.KubernetesClusterConfig)   | <span class="no-wrap">`kubernetes-cluster-config`</span> | Stores configuration for interaction with Kubernetes clusters.                                 |
 | [Local File System](/3.0rc/concepts/filesystems/#local-filesystem)                                                         | `local-file-system`                                      | Stores data as a file on a local file system.
-| [Mattermost Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.Mattermost)                               | `mattermost-webhook`                                                | Sends notifications through a provided Mattermost webhook. |
-| [Microsoft Teams Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.MicrosoftTeamsWebhook) | `ms-teams-webhook`                                       | Sends notifications through a provided Microsoft Teams webhook.                           |
-| [Opsgenie Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.OpsgenieWebhook)              | `opsgenie-webhook`                                       | Sends notifications through a provided Opsgenie webhook.                             |
-| [Pager Duty Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.PagerDutyWebHook)           | `pager-duty-webhook`                                     | Sends notifications through a provided PagerDuty webhook.                                  |
+| [Mattermost Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.Mattermost)                               | `mattermost-webhook`                                                | Sends notifications through a provided Mattermost webhook. |
+| [Microsoft Teams Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.MicrosoftTeamsWebhook) | `ms-teams-webhook`                                       | Sends notifications through a provided Microsoft Teams webhook.                           |
+| [Opsgenie Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.OpsgenieWebhook)              | `opsgenie-webhook`                                       | Sends notifications through a provided Opsgenie webhook.                             |
+| [Pager Duty Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.PagerDutyWebHook)           | `pager-duty-webhook`                                     | Sends notifications through a provided PagerDuty webhook.                                  |
 | [Remote File System](/3.0rc/concepts/filesystems/#remote-file-system)                                                      | `remote-file-system`                                     | Stores data as a file on any remote file system that supports `fsspec`.                  |
 | [S3](/3.0rc/concepts/filesystems/#s3)                                                                                      | `s3`                                                     | Stores data as a file on AWS S3.                               |
-| [Secret](/3.0rc/api-ref/prefect/blocks/system/#prefect.blocks.system.Secret)                                               | `secret`                                           | Stores a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
-| [Sendgrid Email](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.SendgridEmail)                  | `sendgrid-email`                                         | Sends notifications through Sendgrid email.                                         |
-| [Slack Webhook](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.SlackWebhook)                    | `slack-webhook`                                          | Sends notifications through a provided Slack webhook.                      |
+| [Secret](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/system/#prefect.blocks.system.Secret)                                               | `secret`                                           | Stores a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
+| [Sendgrid Email](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.SendgridEmail)                  | `sendgrid-email`                                         | Sends notifications through Sendgrid email.                                         |
+| [Slack Webhook](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.SlackWebhook)                    | `slack-webhook`                                          | Sends notifications through a provided Slack webhook.                      |
 | [SMB](/3.0rc/concepts/filesystems/#smb)                                                                                    | `smb`                                                    | Stores data as a file on a SMB share.                                                     |
-| [Twilio SMS](/3.0rc/api-ref/prefect/blocks/notifications/#prefect.blocks.notifications.TwilioSMS)                          | `twilio-sms`                                             | Sends notifications through Twilio SMS.                                                       |
+| [Twilio SMS](https://prefect-python-sdk-docs.netlify.app/prefect/blocks/notifications/#prefect.blocks.notifications.TwilioSMS)                          | `twilio-sms`                                             | Sends notifications through Twilio SMS.                                                       |
 
 <Warning>
 The `S3`, `Azure`, `GCS`, and `GitHub` blocks are deprecated in favor of the the corresponding `S3Bucket`, 
