--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -69,7 +69,7 @@ to enable [dryer deployment definitions](/3.0rc/deploy/serve-flows/#reusing-conf
     Prefect now automatically detects flows in your repo and provides a [wizard](/3.0rc/#step-5-deploy-the-flow)  
     to guide you through setting required attributes for your deployments.
 
-    `Deployment.build_from_flow` --> [`flow.deploy`](/3.0rc/api-ref/prefect/flows/#prefect.flows.Flow.deploy)
+    `Deployment.build_from_flow` --> [`flow.deploy`](https://prefect-python-sdk-docs.netlify.app/prefect/flows/#prefect.flows.Flow.deploy)
 
 2. **Configuring remote flow code storage:**
 
