--- a/docs/3.0rc/deploy/work-pools/prefect-deploy.mdx
+++ b/docs/3.0rc/deploy/work-pools/prefect-deploy.mdx
@@ -342,7 +342,7 @@ The exception is if there is something the server needs to know about changes, s
 Rerunning the Python script with `.deploy` updates your deployment on the server with the new flow code.
 
 If you need to provide additional configuration, such as specifying a private repository, you can provide a 
-[`GitRepository`](/3.0rc/api-ref/prefect/flows/#prefect.runner.storage.GitRepository) object instead of a URL:
+[`GitRepository`](https://prefect-python-sdk-docs.netlify.app/prefect/flows/#prefect.runner.storage.GitRepository) object instead of a URL:
 
 ```python private_git_storage.py
 from prefect import flow
