--- a/docs/3.0rc/develop/task-run-limits.mdx
+++ b/docs/3.0rc/develop/task-run-limits.mdx
@@ -78,7 +78,7 @@ prefect concurrency-limit inspect small_instance
 #### Python client
 
 To update your tag concurrency limits programmatically, use 
-[`PrefectClient.orchestration.create_concurrency_limit`](../../api-ref/prefect/client/orchestration/#prefect.client.orchestration.PrefectClient.create_concurrency_limit).
+[`PrefectClient.orchestration.create_concurrency_limit`](https://prefect-python-sdk-docs.netlify.app//prefect/client/orchestration/#prefect.client.orchestration.PrefectClient.create_concurrency_limit).
 
 `create_concurrency_limit` takes two arguments:
 
