--- a/docs/3.0rc/develop/pause-resume.mdx
+++ b/docs/3.0rc/develop/pause-resume.mdx
@@ -211,4 +211,4 @@ After successful validation, the flow run resumes, and the return value of the `
 is an instance of the `UserNameInput` model containing the provided data.
 
 For more information on receiving input from users when pausing and suspending flow runs, 
-see [Create interactive workflows](/3.0rc/develop/control-workflows/).
+see [Create interactive workflows](/3.0rc/develop/inputs/).
