--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -20,7 +20,7 @@ def my_flow():
     return
 ```
 
-When a function becomes a flow, its behavior changes, giving it the following abilities:
+When a function becomes a flow, its behavior changes, giving it the following capabilities:
 
 - All runs of the flow have persistent [state](/3.0rc/develop/manage-states/). Transitions between states are recorded, 
 allowing you to observe and act on flow execution.
