--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -100,7 +100,7 @@ Forks 🍴 : 1245
 <Tip>
 **Flows can contain arbitrary Python code**
 
-As shown above, flow definitions can contain arbitrary Python logic.
+As shown above, flow definitions can contain arbitrary Python code.
 </Tip>
 
 ## Parameters
