--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -290,7 +290,7 @@ See [Final state determination](#final-state-determination) for examples of usin
 conditionally run the subflow rather than each task individually.
 - Parameters: Flows have first-class support for parameterization, making it easy to run the same group of tasks in different use 
 cases by simply passing different parameters to the subflow in which they run.
-- Task runners: Subflows enable you to specify the task runner used for tasks within the flow. For example, to optimize 
+- Task runners: Nested flows enable you to specify the task runner used for tasks within the flow. For example, to optimize 
 parallel execution of certain tasks with Dask, group them in a subflow that uses the Dask task runner. You can use a different 
 task runner for each subflow.
 
