--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -292,7 +292,7 @@ conditionally run the subflow rather than each task individually.
 cases by simply passing different parameters to the subflow in which they run.
 - Task runners: Nested flows enable you to specify the task runner used for tasks within the flow. For example, to optimize 
 parallel execution of certain tasks with Dask, group them in a nested flow that uses the Dask task runner. You can use a different 
-task runner for each subflow.
+task runner for each nested flow.
 
 ## Supported functions
 
