--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -9,7 +9,7 @@ A flow is a container for workflow logic as code.
 ## Writing flows
 
 Flows are defined as Python functions. 
-Flows can take inputs, perform work, and return an output.
+They can take inputs, perform work, and return an output.
 You can turn any function into a Prefect flow by adding the `@flow` decorator to it:
 
 ```python
