--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -158,7 +158,7 @@ Flow run parameters sent to the API on flow calls are coerced to the appropriate
 **Prefect API requires keyword arguments**
 
 When creating flow runs from the Prefect API, you must specify parameter names when overriding defaults. 
-They cannot be positional.
+The values passed cannot be positional.
 </Warning>
 
 Parameters are validated before a flow is run.
