--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -197,7 +197,7 @@ and [final state](#final-state-determination) of any invocation.
 
 We recommend small tasks.
 Each task should be a single, discrete piece of work in your workflow, such as calling an API, performing a database operation, or transforming a data point.
-The more granular you make your tasks, your workflows can better recover from failures and you can more easily find and fix issues.
+The more granular you make your tasks, the better your workflows can recover from failures and the easier you can find and fix issues.
 Prefect tasks are well suited for parallel or distributed execution using distributed computation frameworks such as Dask or Ray. 
 
 ### Nesting flows
