--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -232,7 +232,7 @@ Whether running locally or through a [deployment](/3.0rc/deploy/serve-flows/), y
 <Warning>
 **Cancelling nested flow runs**
 
-Nested flow runs cannot be cancelled without cancelling their parent flow run.
+A nested flow run cannot be cancelled without cancelling its parent flow run.
 If you may need to cancel a nested flow run independent of its parent flow run, we recommend deploying it separately and starting it using 
 the [run_deployment](/3.0rc/api-ref/prefect/deployments/deployments/#prefect.deployments.deployments.run_deployment) function.
 </Warning>
