--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -266,6 +266,7 @@ def hello_world(name="world"):
     message = print_hello(name)
     my_subflow(message)
 
+if __name__=="__main__":
 hello_world("Marvin")
 ```
 
