--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -46,7 +46,7 @@ def my_flow():
 A _flow run_ is a single execution of a flow.
 
 You can create a flow run by calling a flow by its function name, just as you would a normal Python function.
-For example, by running a Python script or importing a flow into an interactive session and calling it.
+For example, by running a script or importing the function into an interactive session and calling it.
 
 You can also create a flow run by:
 
