--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -4,12 +4,11 @@ description: Learn how to upgrade from Prefect 2 to Prefect 3.
 ---
 
 Some patterns supported by Prefect 2 are no longer supported with Prefect 3, or are enabled differently. 
-This guide covers changes that you may need to make to ensure your flows keep flowing.
+This guide covers changes that you may need to make to ensure your Prefect 2 workflows keep flowing.
 
 ## Module locations and names
 
-Some modules have been renamed, reorganized, or removed for clarity. Objects imported from changed modules will continue to work until their deprecation period ends, but will raise deprecation warnings. 
-You must update these modules before the six month deprecation period ends:
+Some modules have been renamed, reorganized, or removed for clarity. Objects imported from changed modules will continue to work until their six month deprecation period ends, but will raise deprecation warnings. Here are the corresponding modules in Prefect 3:
 
 | Prefect 2 | Prefect 3 | Notes                                 |
 | --------- | --------- | ------------------------------------- |
