--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -234,7 +234,7 @@ If you need to be able to cancel a nested flow run independent of its parent flo
 the [run_deployment](/3.0rc/api-ref/prefect/deployments/deployments/#prefect.deployments.deployments.run_deployment) method.
 </Warning>
 
-You can also define flows or tasks in separate modules and import them for usage:
+You can also define flows or tasks in separate modules and import them for use:
 
 ```python
 from prefect import flow, task
