--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -555,9 +555,7 @@ If set to `False`, no validation is performed on flow parameters.
 
 ## Final state determination
 
-<Note>
-Read the documentation about [states](/3.0rc/develop/manage-states) before proceeding with this section.
-</Note>
+States are a record of the status of a particular task or flow run. See the [manage states](/3.0rc/develop/manage-states) page for more information.
 
 The final state of the flow is determined by its return value. The following rules apply:
 
