--- a/docs/3.0rc/develop/write-tasks.mdx
+++ b/docs/3.0rc/develop/write-tasks.mdx
@@ -365,7 +365,7 @@ Tasks allow for customization through optional arguments that can be provided to
 | `retry_delay_seconds` | An optional number of seconds to wait before retrying the task after failure. This is only applicable if `retries` is nonzero.                                                                                          |
 | `log_prints`|An optional boolean indicating whether to log print statements. |
 
-See all possible options in the [Python SDK API docs](https://prefect-python-sdk-docs.netlify.app/prefect/tasks/#prefect.tasks.task).
+See all possible options in the [Python SDK docs](https://prefect-python-sdk-docs.netlify.app/prefect/tasks/#prefect.tasks.task).
 
 For example, you can provide a `name` value for the task. Here's an example of the optional `description` argument 
 as well:
